# docs/swagger.json
@@ -569,7 +569,7 @@
                 }
             }
         },
-        "/user": {
+        "/users": {
             "put": {
                 "description": "Create User",
                 "consumes": [
@@ -579,9 +579,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "users"
                 ],
-                "summary": "user",
+                "summary": "users",
                 "parameters": [
                     {
                         "description": "user_id, password, name(닉네임)",
@@ -623,9 +623,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "users"
                 ],
-                "summary": "user",
+                "summary": "users",
                 "parameters": [
                     {
                         "description": "user_id, password, name(닉네임)",
@@ -665,7 +665,7 @@
                 }
             }
         },
-        "/user/{user_id}": {
+        "/users/{user_id}": {
             "get": {
                 "description": "Find User by ID",
                 "consumes": [
@@ -675,9 +675,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "users"
                 ],
-                "summary": "user",
+                "summary": "users",
                 "parameters": [
                     {
                         "type": "string",
